fix no-data mode table tooltip align center question

--- a/src/webui/src/static/style/succTable.scss
+++ b/src/webui/src/static/style/succTable.scss
@@ -5,10 +5,6 @@
     position: relative;
 
     .succTable-tooltip {
-        position: absolute;
-        top: 40%;
-        left: 5%;
-
         .link {
             margin-left: 15px;
 
